feat: 2nd task of 8th la20 homework

--- a/courses/la20/homework/ha08.tex
+++ b/courses/la20/homework/ha08.tex
@@ -70,4 +70,24 @@ Beweisen Sie die folgenden Aussagen:
   Es folgt $m_A \ne 1_K$ und $g = 1_K$, sowie $f_A = 1_K \cdot m_A = m_A$.
 \end{enumerate}
 
+\paragraph{Aufgabe 7} Seien $n \in \mathbb{N}$ und
+$A \in \mathcal{M}_{n \times n}\qty\big(\mathbb{R})$ mit
+\[
+  A^3 - 3A^2 -A = -3I_n
+\]
+Bestimmen Sie die möglichen Eigenwerte von $A$.
+
+\subparagraph{Lsg.} Es ist $A^3 - 3A^2 - A + 3I_n = 0$.
+
+$\Rightarrow \qty\Big(
+  \qty\big(X + 1)\qty\big(X - 1)\qty\big(X - 3)
+)\qty\big(A) = 0$
+
+$\Rightarrow m_A$ ist ein Teiler von
+$\qty\big(X + 1)\qty\big(X - 1)\qty\big(X - 3)$.
+
+$\Rightarrow$ alle Nullstellen von
+$\qty\big(X + 1)\qty\big(X - 1)\qty\big(X - 3)$ sind mögliche Eigenwerte.
+
+Mögliche Eigenwerte von $A$ sind nun $-1$, $1$ und $3$
 \end{document}
