--- a/courses/la20/homework/ha10.tex
+++ b/courses/la20/homework/ha10.tex
@@ -22,10 +22,13 @@
 \usetikzlibrary{patterns}
 \usepgfplotslibrary{fillbetween}
 
-\newcommand{\Bild }{\text{Bild}}
+\newcommand{\Bild}{\text{Bild}}
+\newcommand{\Dim}{\text{Dim}}
 \newcommand{\End}{\text{End}}
+\newcommand{\id}{\text{id}}
 \newcommand{\Grad}{\text{Grad}}
 \newcommand{\Mat}{\text{Mat}}
+\newcommand{\Rang}{\text{Rang}}
 \newcommand{\Spur}{\text{Spur}}
 
 \author{Karsten Lehmann\\Mat. Nr 4935758}
@@ -118,4 +121,138 @@ Die nach Lemma 11.19 (b) $\varphi$-invarianten Eigenräume von $\varphi$ sind
 \]
 Schließlich ist $V$ nicht $\varphi$-unzerlegbar, da
 $V = V_1^{\varphi} \oplus V_{-1}^{\varphi}$.
+
+\newpage
+\paragraph{Aufgabe 7} Sei $\qty\big{0_V} \ne V$ ein endlich-dimensionaler
+Vektorraum über $\mathbb{R}$, sei $\mathcal{B}'$ eine Basis von $V$ und
+$\varphi \in \End\qty\big(V)$.
+Bestimmen Sie für die folgenden Fälle jeweils eine allgemeine Normalform von
+$\varphi$.
+\begin{enumerate}[(i)]
+\item $\Mat\qty\big(\varphi, \mathcal{B}') = \begin{pmatrix}
+    1 & 1 \\
+    0 & 1 \\
+  \end{pmatrix}$
+
+  \subparagraph{Lsg.} Es ist $f_{\varphi} = \qty\big(X - 1)^2$.
+  Nach Caley-Hamilton ist $f_{\varphi} = m_{\varphi} = 1 -2X + X^2$.
+  Nach Bemerkung 13.18 der Vorlesung ist in einer allgemeinen Normalform
+  immer ein Kästchen der Form $A(m_{\varphi})$.
+  Es folgt $N \coloneqq \begin{pmatrix}
+    0 & -1 \\
+    1 & 2 \\
+  \end{pmatrix}$ ist die allgemeine Normalform von $\varphi$.
+
+\item $m_{\varphi} = \qty\big(X - 1)^2 \qty\big(X - 2)^2\qty\big(X - 3)^2$ und
+  $f_{\varphi} = \qty\big(X - 1)^2 \qty\big(X - 2)^2\qty\big(X - 3)^3$.
+
+  \subparagraph{Lsg.} Wegen $\Grad\qty\big(f_{\varphi}) = 7$ ist die Matrix in
+  der allgemeinen Normalform eine $7 \times 7$ Matrix.
+  Nach Bemerkung 13.18 gibt es in einer allgemeinen Normalform immer Kästchen der
+  Form
+  \[
+    A\qty\big((X - 1)^2) = \begin{pmatrix}
+      0 & -1 \\
+      1 & 2 \\
+    \end{pmatrix}, A\qty\big((X - 2)^2) = \begin{pmatrix}
+      0 & -4 \\
+      1 & 4 \\
+    \end{pmatrix}, A\qty\big((X - 3)^2) = \begin{pmatrix}
+      0 & -9 \\
+      1 & 6 \\
+    \end{pmatrix},
+  \]
+  Damit bleibt noch Platz für ein Kästchen der Größe 1 in der Form
+  \[
+    A\qty\big(X - 1) = 1, A\qty\big(X - 2) = 2 \text{ oder }
+    A\qty\big(X - 3) = 3
+  \]
+  Somit sieht eine allgemeine Normalform von $\varphi$ wie folgt aus
+  \[
+    N \coloneqq \begin{pmatrix}
+      0 & -1 & 0 &  0 & 0 &  0 & 0 \\
+      1 &  2 & 0 &  0 & 0 &  0 & 0 \\
+      0 &  0 & 0 & -4 & 0 &  0 & 0 \\
+      0 &  0 & 1 &  4 & 0 &  0 & 0 \\
+      0 &  0 & 0 &  0 & 0 & -9 & 0 \\
+      0 &  0 & 0 &  0 & 1 &  6 & 0 \\
+      0 &  0 & 0 &  0 & 0 &  0 & a \\
+    \end{pmatrix}
+  \]
+  wobei $a \in \qty\big{1, 2, 3}$.
+  Nach Definition 13.20 der Vorlesung ist $N$ ähnlich zu $\varphi$,
+  aus Lemma 10.15 der Vorlesung folgt $f_N = f_{\varphi}$.
+  Nun ist
+  $f_N = \qty\big(X - 1)^2 \qty\big(X - 2)^2\qty\big(X - 3)^2\qty\big(X - a)$,
+  es folgt $a = 3$.
+  Damit ist
+  \[
+    N \coloneqq \begin{pmatrix}
+      0 & -1 & 0 &  0 & 0 &  0 & 0 \\
+      1 &  2 & 0 &  0 & 0 &  0 & 0 \\
+      0 &  0 & 0 & -4 & 0 &  0 & 0 \\
+      0 &  0 & 1 &  4 & 0 &  0 & 0 \\
+      0 &  0 & 0 &  0 & 0 & -9 & 0 \\
+      0 &  0 & 0 &  0 & 1 &  6 & 0 \\
+      0 &  0 & 0 &  0 & 0 &  0 & 3 \\
+    \end{pmatrix}
+  \]
+  die (bis auf Vertauschung der Blöcke) eindeutige Normalform von $\varphi$.
+
+\newpage
+\item $\Mat\qty\big(\varphi, \mathcal{B}') = \begin{pmatrix}
+    3 & 0 & 0 & -1 \\
+    1 & 2 & 0 & -1 \\
+    0 & 0 & 2 &  0 \\
+    1 & 0 & 0 &  1 \\
+  \end{pmatrix}$
+
+  \subparagraph{Lsg.} Es ist
+  \begin{flalign*}
+    f_{\varphi} &= \qty\big(X - 2)\det\begin{pmatrix}
+      X - 3 & 0 & 1 \\
+      -1 & X - 2 & 1 \\
+      -1 & 0 &  X - 1 \\
+    \end{pmatrix} &\\
+    &= \qty\big(X - 2)^2\det\begin{pmatrix}
+      X - 3 & 1 \\
+      -1 & X - 1 \\
+    \end{pmatrix} \\
+    &= \qty\big(X - 2)^2\qty\big(X^2 - 4X + 4) \\
+    &= \qty\big(X - 2)^4
+  \end{flalign*}
+  Setze nun $A \coloneqq \Mat\qty\big(\varphi, \mathcal{B}') - 2I_4
+  = \begin{pmatrix}
+    1 & 0 & 0 & -1 \\
+    1 & 0 & 0 & -1 \\
+    0 & 0 & 0 &  0 \\
+    1 & 0 & 0 & -1 \\
+  \end{pmatrix}$.
+  Dann ist $A \ne 0$, aber $A \cdot A = 0$.
+  Es folgt $m_{\varphi} = \qty\big(X - 2)^2$.
+  Nun hat die allgemeine Normalform von $\varphi$ mindestens einen Block der Form
+  $A\qty\big((X - 2)^2)$ und eventuell zwei Blöcke der Form $A(X - 2)$.
+  Lässt man die Reihenfolge der Blöcke außer Acht, stehen die folgenden beiden
+  Kandidaten für die allgemeine Normalform im Raum
+  \[
+    N_1 \coloneqq \begin{pmatrix}
+      0 & -4 & 0 &  0 \\
+      1 &  4 & 0 &  0 \\
+      0 &  0 & 0 & -4 \\
+      0 &  0 & 1 &  4 \\
+    \end{pmatrix} \text { und } N_2 \coloneqq \begin{pmatrix}
+      0 & -4 & 0 & 0 \\
+      1 &  4 & 0 & 0 \\
+      0 &  0 & 2 & 0 \\
+      0 &  0 & 0 & 2 \\
+    \end{pmatrix}
+  \]
+  Nun ist $\Dim\qty\big(\Bild\qty\big(\varphi - 2\id)) =
+  \Rang\qty\big(\Mat\qty\big(\varphi, \mathcal{B}') - 2I_4) = 1$.
+  Weiter sind $\Rang\qty\big(N_1 - 2I_4) = 2$ und
+  $\Rang\qty\big(N_2 - 2I_4) = 4$.
+
+  Es folgt $N_2$ ist die (bis auf Vertauschung der Blöcke) eindeutige
+  Normalform von $\varphi$.
+\end{enumerate}
 \end{document}
